--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,19 @@ html {
     src: url("./fonts/Lato-Regular.ttf") format("truetype");
     font-display: auto;
 }
+
+@font-face {
+    font-family: Lato;
+    font-weight: 700;
+    font-style: normal;
+    src: url("./fonts/Lato-Bold.ttf") format("truetype");
+    font-display: auto;
+}
+
+@font-face {
+    font-family: Crimson Text;
+    font-weight: 400;
+    font-style: normal;
+    src: url("./fonts/CrimsonText-Regular.ttf") format("truetype");
+    font-display: auto;
+}
